--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
+    "prettier-plugin-prisma": "^5.0.0",
     "prisma": "^5.4.2",
     "tailwindcss": "^3",
     "typescript": "^5"
