--- a/.env
+++ b/.env
@@ -13,4 +13,12 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:./dev.db"
+# DATABASE_URL="file:./dev.db"
+
+POSTGRES_URL="postgres://default:q2tEFMGIi3pk@ep-sweet-glade-74196245-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb"
+POSTGRES_PRISMA_URL="postgres://default:q2tEFMGIi3pk@ep-sweet-glade-74196245-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb?pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NON_POOLING="postgres://default:q2tEFMGIi3pk@ep-sweet-glade-74196245.us-east-1.postgres.vercel-storage.com:5432/verceldb"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-sweet-glade-74196245-pooler.us-east-1.postgres.vercel-storage.com"
+POSTGRES_PASSWORD="q2tEFMGIi3pk"
+POSTGRES_DATABASE="verceldb"
